add the secure keys

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 MONGO_URL=mongodb://localhost:27017/userDB
- JWT_SECRET=@fshn37646HgF
+JWT_SECRET=@fshn37646HgF
+PORT=4000
+SESSION_SECRET=b1a98f8c7fbf
  
  CLOUD_NAME=dwbatnami
  API_KEY=378968417927854
@@ -15,3 +17,7 @@ MONGO_URL=mongodb://localhost:27017/userDB
  GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CALLBACK_URL=
