--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "supertest-session": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
